--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,17 +3,7 @@ title: Introduction
 description: "Welcome to the home of your new documentation"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
-
+<img className="block" src="/images/hero.png" alt="Hero" />
 ## Setting up
 
 The first step to world-class documentation is setting up your editing environments.
