updated all docs via claude code and our XO AI Terminology doc

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,61 +1,190 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Welcome to XtendOps
+description: "Build, manage, and monitor AI-powered SmartAgents for customer service excellence"
 ---
 
-<img className="block" src="/images/hero.png" alt="Hero" />
-## Setting up
+Welcome to the **XtendOps Platform** (XO_AI) — your comprehensive solution for building, managing, and monitoring SmartAgents that transform customer service operations.
 
-The first step to world-class documentation is setting up your editing environments.
+## What is XtendOps?
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+XtendOps provides a powerful platform for creating **SmartAgents**: BPO-focused AI agents designed to handle customer interactions through automated workflows or assist human agents with AI-powered suggestions.
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
+### Key Capabilities
 
 <CardGroup cols={2}>
   <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    title="Build SmartAgents"
+    icon="wand-magic-sparkles"
+    href="/platform/smartAgentBuilder"
   >
-    Customize your docs to your company's colors and brands
+    Create sophisticated workflows using our visual builder and modular step library
   </Card>
   <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    title="Test & Validate"
+    icon="flask"
+    href="/platform/evals"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Ensure quality with comprehensive testing suite and performance benchmarking
   </Card>
   <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
+    title="Monitor Performance"
+    icon="gauge"
+    href="/dashboard"
   >
-    Build interactive features and designs to guide your users
+    Track metrics, analyze conversations, and gather insights from the Voice of the Customer
   </Card>
   <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
+    title="Assist Agents"
+    icon="user-headset"
+    href="/coPilot"
   >
-    Check out our showcase of our favorite documentation
+    Empower human agents with AI-suggested responses through the Co-Pilot App
   </Card>
 </CardGroup>
+
+## Getting Started
+
+<Steps>
+  <Step title="Understand the Platform">
+    Learn about the platform architecture and key concepts
+    - [Definitions & Glossary](/definitions)
+    - [Platform Architecture](/architecture)
+    - [User Roles & Permissions](/personas)
+  </Step>
+
+  <Step title="Explore the Dashboard">
+    Familiarize yourself with the main interface and metrics
+    - [Dashboard Overview](/dashboard)
+    - Navigate to SmartAgents
+    - Review key performance indicators
+  </Step>
+
+  <Step title="Build Your First SmartAgent">
+    Create a simple workflow to get hands-on experience
+    - [SmartAgent Builder](/platform/smartAgentBuilder)
+    - [Step Types](/platform/smartAgentSteps)
+    - [Quick Actions](/platform/smartAgentActions)
+  </Step>
+
+  <Step title="Test and Deploy">
+    Validate your SmartAgent before going live
+    - [Testing Suite](/platform/evals)
+    - [Quality Review](/platform/qaQueue)
+    - Deploy with confidence
+  </Step>
+</Steps>
+
+## Platform Sections
+
+### Core Platform
+
+<CardGroup cols={2}>
+  <Card
+    title="SmartAgent Builder"
+    icon="wand-magic-sparkles"
+    href="/platform/smartAgentBuilder"
+  >
+    Visual workflow editor for creating and modifying SmartAgents
+  </Card>
+  <Card
+    title="Knowledge Management"
+    icon="book"
+    href="/platform/knowledgeManagement"
+  >
+    Upload and manage articles that SmartAgents can reference
+  </Card>
+  <Card
+    title="Testing Suite"
+    icon="flask"
+    href="/platform/evals"
+  >
+    Create evals and benchmark SmartAgent performance
+  </Card>
+  <Card
+    title="Quality"
+    icon="clipboard-check"
+    href="/platform/qaQueue"
+  >
+    Review conversations and provide feedback
+  </Card>
+</CardGroup>
+
+### Analytics & Insights
+
+<CardGroup cols={2}>
+  <Card
+    title="Dashboard"
+    icon="gauge"
+    href="/dashboard"
+  >
+    Overview of SmartAgents and key metrics
+  </Card>
+  <Card
+    title="Voice of the Customer"
+    icon="chart-line"
+    href="/platform/reporting"
+  >
+    Explore conversations to uncover trends and insights
+  </Card>
+</CardGroup>
+
+### Configuration
+
+<CardGroup cols={2}>
+  <Card
+    title="Settings"
+    icon="gear"
+    href="/platform/settings"
+  >
+    Manage users, integrations, and AI provider keys
+  </Card>
+  <Card
+    title="Co-Pilot App"
+    icon="user-headset"
+    href="/coPilot"
+  >
+    AI assistant interface for human agents
+  </Card>
+</CardGroup>
+
+## Use Cases
+
+### Automated Customer Service
+Build fully automated SmartAgents that handle common customer inquiries end-to-end, reducing the need for human intervention.
+
+### Agent Assist (Co-Pilot)
+Empower your support team with AI-suggested responses that agents can review, edit, and send, improving efficiency while maintaining quality.
+
+### Knowledge Augmentation
+Leverage your knowledge base dynamically within conversations, ensuring accurate and consistent information delivery.
+
+### Quality Assurance
+Systematically review conversations, track performance metrics, and continuously improve SmartAgent quality.
+
+## Support & Resources
+
+<CardGroup cols={2}>
+  <Card
+    title="Security"
+    icon="shield"
+    href="/security/general"
+  >
+    Learn about our security practices and policies
+  </Card>
+  <Card
+    title="FAQ"
+    icon="question"
+    href="/security/faq"
+  >
+    Common questions and answers
+  </Card>
+</CardGroup>
+
+## Ready to Begin?
+
+Start by exploring the platform fundamentals:
+
+- **[Definitions](/definitions)** - Key terminology and concepts
+- **[Architecture](/architecture)** - How the platform works
+- **[Dashboard](/dashboard)** - Your command center
+- **[SmartAgent Builder](/platform/smartAgentBuilder)** - Build your first workflow
