--- a/platform/smartAgentActions.mdx
+++ b/platform/smartAgentActions.mdx
@@ -1,5 +1,114 @@
 ---
-title: Actions
-description: Frequently Asked Questions
-icon: ""
+title: Quick Actions
+description: Reusable, task-specific workflows for SmartAgents
+icon: "bolt"
 ---
+
+**Quick Actions** are reusable, task-specific workflows that can be triggered by agents, SmartAgents, or timers. They provide modular functionality that extends SmartAgent capabilities without cluttering the main conversation flow.
+
+## Overview
+
+Quick Actions enable you to create focused, purpose-built workflows that can be invoked on-demand or automatically based on triggers. They're designed to improve efficiency, consistency, and response quality.
+
+## Triggers
+
+Quick Actions can be initiated in multiple ways:
+
+### Manual Triggers
+- Agents can trigger Quick Actions directly from the Co-Pilot App
+- SmartAgents can call Quick Actions programmatically
+
+### Timer-Based Triggers
+- **After Agent Message** - Trigger 1 minute after an agent sends a message
+- **After Inactivity** - Trigger after 3 minutes of customer inactivity
+- **Custom Timers** - Configure specific timing conditions
+
+### Programmatic Triggers
+- Invoke Quick Actions from within SmartAgent workflows
+- Call from external systems via API
+
+## Common Use Cases
+
+### Response Suggestions
+Generate suggested responses for human agents to review and send.
+
+**Example:**
+- Agent receives a complex customer inquiry
+- Quick Action analyzes the message and suggests a response
+- Agent reviews, edits, and sends
+
+### Tone Adjustment
+Rephrase AI-generated responses to match desired tone.
+
+**Example:**
+- AI generates a response that seems too formal
+- Agent triggers "Make Friendlier" Quick Action
+- Response is rephrased with emojis and casual language
+
+### CRM Updates
+Update external systems like Salesforce automatically.
+
+**Example:**
+- Conversation reaches resolution
+- Quick Action updates case status in CRM
+- Logs conversation summary and tags
+
+### Inactivity Follow-ups
+Send automated follow-up messages after periods of customer silence.
+
+**Example:**
+- Customer hasn't responded in 3 minutes
+- Quick Action triggers: "Are you still there? Let me know if you need anything else!"
+
+### Data Extraction
+Extract and structure information from conversations.
+
+**Example:**
+- Extract order number, issue type, and priority
+- Format as structured data for downstream systems
+- Update tracking dashboards
+
+## Configuration
+
+Quick Actions are configured in the **SmartAction Configuration** tab of the SmartAgent Builder.
+
+**Configuration Options:**
+- **Name** - Descriptive name for the action
+- **Trigger Type** - Manual, timer-based, or programmatic
+- **Workflow** - Chain of steps that execute when triggered
+- **Permissions** - Which roles can trigger the action
+- **Context** - What conversation data is available to the action
+
+## Integration with Co-Pilot App
+
+Quick Actions are directly accessible from the Co-Pilot App, allowing human agents to:
+
+- View available Quick Actions
+- Trigger actions via command line
+- See results in real-time
+- Edit AI-generated outputs before sending
+
+[Learn more about the Co-Pilot App →](/platform/coPilot)
+
+## Best Practices
+
+1. **Keep Actions Focused** - Each Quick Action should do one thing well
+2. **Name Clearly** - Use descriptive names that indicate what the action does
+3. **Set Appropriate Timers** - Don't trigger too quickly or too late
+4. **Provide Context** - Ensure actions have access to necessary conversation data
+5. **Test Thoroughly** - Validate Quick Actions work across different scenarios
+
+## Purpose
+
+Quick Actions provide tools for SmartAgents and human agents to:
+- Improve efficiency
+- Maintain consistency
+- Enhance response quality
+- Automate repetitive tasks
+- Reduce agent workload
+
+## Related Pages
+
+- [SmartAgent Builder](/platform/smartAgentBuilder) - Configure Quick Actions
+- [Step Types](/platform/smartAgentSteps) - Steps available for Quick Action workflows
+- [Co-Pilot App](/platform/coPilot) - How agents use Quick Actions
