--- a/platform/smartAgentProfile.mdx
+++ b/platform/smartAgentProfile.mdx
@@ -1,5 +1,24 @@
 ---
 title: SmartAgent Profile
-description: Frequently Asked Questions
-icon: ""
+description: Overview of the SmartAgent currently being viewed
+icon: "user-robot"
 ---
+
+The **SmartAgent Profile** tab provides a comprehensive overview of the SmartAgent you're currently working with. This is one of the three main tabs within the SmartAgent Builder workspace.
+
+## Purpose
+
+The SmartAgent Profile serves as the information hub for a specific SmartAgent, displaying key metadata, deployment status, and performance metrics at a glance.
+
+## What You'll Find Here
+
+- **Version Information** - Current version number and deployment history
+- **Creation Date** - When the SmartAgent was first created
+- **Deployed Version** - Which version is currently active in production
+- **Performance Metrics** - Key performance indicators specific to this SmartAgent
+- **Configuration Overview** - High-level summary of the SmartAgent's setup
+
+## Related Sections
+
+- [SmartAgent Builder](/platform/smartAgentBuilder) - Canvas view for configuring steps and deploying versions
+- [SmartAction Configuration](/platform/smartAgentActions) - Manage quick actions for this SmartAgent
