--- a/platform/knowledgeManagement.mdx
+++ b/platform/knowledgeManagement.mdx
@@ -1,5 +1,146 @@
 ---
 title: Knowledge Management
-description: Frequently Asked Questions
-icon: ""
+description: Upload and manage knowledge articles for SmartAgents
+icon: "book"
 ---
+
+The **Knowledge Management** section is a tool for uploading and managing knowledge articles that can be referenced by SmartAgents during conversations.
+
+## Overview
+
+Knowledge Management provides a central repository of information that SmartAgents can search and retrieve to provide accurate, contextual responses. This ensures consistent information across all customer interactions.
+
+## Purpose
+
+Supports the **Knowledge Search** step by providing a centralized knowledge base that SmartAgents can query during interactions.
+
+[Learn more about Knowledge Search step →](/platform/smartAgentSteps#knowledge-search)
+
+## Features
+
+### Bulk Upload
+
+Allows CSV uploads to quickly import multiple knowledge articles at once.
+
+**CSV Format:**
+- Title
+- Content
+- Namespace (for categorization)
+- Tags/metadata
+- Last updated date
+
+**Benefits:**
+- Quick migration from existing knowledge bases
+- Batch updates across multiple articles
+- Consistent formatting
+
+### Article Management
+
+Once uploaded, articles can be:
+
+#### Viewed
+- View complete article content within the Knowledge Management interface
+- See usage statistics (how often retrieved)
+- Review average feedback scores
+- Track last updated date
+
+#### Edited
+- Update article content directly in the interface
+- Modify titles and descriptions
+- Adjust namespace assignments
+- Update metadata
+
+#### Tagged and Annotated
+- Add metadata for improved search relevance
+- Assign to namespaces for organization
+- Tag with keywords
+- Set priority or visibility flags
+
+### Article Metrics
+
+Track how knowledge articles are performing:
+- **Usage Count** - How many times the article has been retrieved
+- **Average Feedback** - Quality ratings from responses using this article
+- **Last Updated** - When the article was last modified
+
+## Usage in SmartAgents
+
+Articles stored in Knowledge Management become available to any SmartAgent using the **Knowledge Search** step.
+
+### Retrieval Methods
+
+**Filter-Based:**
+- Search by namespace
+- Filter by tags
+- Match specific criteria
+
+**Similarity Search:**
+- Semantic matching based on conversation context
+- Retrieve most relevant articles
+- Rank by relevance score
+
+**Combined Approach:**
+- Apply filters first to narrow scope
+- Use similarity search within filtered results
+- Return top-ranked articles
+
+## Namespaces
+
+Organize articles into logical groupings:
+- **Product Information** - Specifications, features, pricing
+- **Troubleshooting** - Common issues and solutions
+- **Policies** - Return policies, shipping info, terms
+- **FAQs** - Frequently asked questions
+- **Procedures** - Step-by-step instructions
+
+## Best Practices
+
+1. **Keep Articles Focused** - One topic per article
+2. **Use Clear Titles** - Make articles easy to find
+3. **Update Regularly** - Keep information current
+4. **Tag Comprehensively** - Use multiple relevant tags
+5. **Monitor Usage** - Review which articles are most helpful
+6. **Retire Outdated Content** - Remove or update obsolete information
+
+## Integration Workflow
+
+1. **Upload** - Add articles via CSV or manual entry
+2. **Organize** - Assign namespaces and tags
+3. **Configure SmartAgent** - Add Knowledge Search steps to workflows
+4. **Monitor** - Track article usage and feedback
+5. **Optimize** - Update or remove articles based on performance
+
+## Example Use Cases
+
+### Customer Support
+- Product troubleshooting guides
+- Return and refund policies
+- Shipping information
+- Account management procedures
+
+### Sales
+- Product specifications
+- Pricing and promotions
+- Feature comparisons
+- Use case examples
+
+### Technical Support
+- Error code explanations
+- Configuration instructions
+- API documentation
+- Integration guides
+
+## Content Quality
+
+Ensure knowledge articles are:
+- **Accurate** - Verified and up-to-date
+- **Clear** - Easy to understand
+- **Concise** - No unnecessary information
+- **Structured** - Well-organized with headings
+- **Actionable** - Provide clear next steps
+
+## Related Pages
+
+- [Step Types](/platform/smartAgentSteps) - Knowledge Search step configuration
+- [SmartAgent Builder](/platform/smartAgentBuilder) - Integrate knowledge into workflows
+- [Quality](/platform/qaQueue) - Monitor how knowledge articles perform in conversations
