--- a/platform/qaQueue.mdx
+++ b/platform/qaQueue.mdx
@@ -1,5 +1,135 @@
 ---
-title: QA Queue
-description: Frequently Asked Questions
-icon: ""
+title: Quality
+description: Tools for collecting and reviewing SmartAgent feedback
+icon: "clipboard-check"
 ---
+
+The **Quality** section provides tools for collecting and reviewing feedback on SmartAgent performance. It consists of three main tabs that enable systematic quality assessment and continuous improvement.
+
+## Overview
+
+Quality management is essential for maintaining high standards in AI-generated responses. This section provides the infrastructure to review conversations, collect feedback, and track performance over time.
+
+## Tabs
+
+### Queue
+
+A workspace for reviewing items flagged for quality assessment. Items can be automatically or manually added for review.
+
+**What's in the Queue:**
+
+#### Messages
+Individual messages with their complete context:
+- Customer input
+- AI-generated response
+- Final delivered message
+- Background context
+
+#### Conversations
+Full conversation threads for context-rich feedback, allowing reviewers to:
+- See the complete customer journey
+- Assess multi-turn interactions
+- Evaluate conversation flow
+- Identify patterns
+
+#### QA Rules
+Outputs from QA SmartAgents that have graded conversations and sent results to the queue for human review.
+
+**Feedback Collection:**
+- **Thumbs Up/Down** - Binary quality assessment
+- **Reason** - Categorized reason for the rating
+- **Comment** - Optional detailed feedback
+
+**Integration:**
+- Results are integrated into the BI platform for reporting
+- Used to ensure confidence in AI performance
+- Informs prompt/step improvements
+- Tracks quality trends over time
+
+### Conversations
+
+Allows review of raw conversation data within a client account.
+
+**Features:**
+- Displays complete back-and-forth between user and AI
+- Enables performance assessment
+- Provides feedback interface
+- Filterable by date, SmartAgent, and tags
+
+**Use Cases:**
+- Random quality sampling
+- Investigating specific issues
+- Training and calibration
+- Customer escalations review
+
+### Rules
+
+Used to create automated QA rules that run on a schedule.
+
+**Capabilities:**
+- Select random sampling of conversations or messages each day
+- Populate the queue automatically for review
+- Provide random performance datasets for analysis
+- Enable quality insights sharing with customers
+
+**Configuration Options:**
+- **Schedule** - Daily, weekly, or custom frequency
+- **Sample Size** - Number of items to select
+- **Filters** - SmartAgent, date range, tags
+- **Assignment** - Which reviewers see which items
+
+## Purpose
+
+The Quality section serves multiple purposes:
+
+### Performance Validation
+- Ensure AI responses meet quality standards
+- Identify areas for improvement
+- Track quality metrics over time
+
+### Continuous Improvement
+- Collect structured feedback
+- Inform prompt engineering
+- Guide SmartAgent modifications
+- Validate changes
+
+### Customer Transparency
+- Demonstrate satisfaction levels
+- Share quality metrics with stakeholders
+- Build confidence in AI performance
+
+### Risk Mitigation
+- Catch problematic responses early
+- Identify edge cases
+- Prevent recurring issues
+
+## Workflow
+
+1. **Items Enter Queue** - Automatically via rules or manually flagged
+2. **Reviewers Assess** - Evaluate messages/conversations and provide feedback
+3. **Feedback Collected** - Thumbs up/down, reason, and comments captured
+4. **Data Integrated** - Results flow to BI platform for reporting
+5. **Actions Taken** - Insights drive improvements to SmartAgents
+
+## Best Practices
+
+1. **Regular Review** - Schedule consistent review sessions
+2. **Calibration** - Align reviewers on quality standards
+3. **Random Sampling** - Don't only review flagged items
+4. **Actionable Feedback** - Provide specific, constructive comments
+5. **Track Trends** - Monitor quality metrics over time
+6. **Close the Loop** - Use feedback to improve SmartAgents
+
+## Integration with BI
+
+Feedback data is integrated into the BI platform, enabling:
+- Quality trend analysis
+- Performance dashboards
+- Customer reporting
+- Comparative analysis across SmartAgents
+
+## Related Pages
+
+- [Testing Suite](/platform/evals) - Automated testing and benchmarking
+- [SmartAgent Builder](/platform/smartAgentBuilder) - Make improvements based on feedback
+- [Reporting](/platform/reporting) - Analyze quality trends
