add screenshots from the pdf

--- a/architecture.mdx
+++ b/architecture.mdx
@@ -10,6 +10,8 @@ The **XtendOps Platform** (XO_AI) is a comprehensive system for building, managi
 
 XO_AI is a platform where you can build, manage, and monitor **SmartAgents** — BPO-focused AI agents designed to handle customer interactions through automated workflows.
 
+<img src="/images/screenshots/platform-overview-diagram.png" alt="Platform Overview Diagram" />
+
 ## Core Components
 
 ### Customer Portal (xoos.xtendops.com)
