--- a/coPilot.mdx
+++ b/coPilot.mdx
@@ -10,6 +10,8 @@ The **Co-Pilot App** is the interface agents use when working with a Co-Pilot Sm
 
 The Co-Pilot App streamlines agent workflows, enhances AI-assisted messaging, and provides quick access to contextual tools. It operates as a side-by-side assistant, suggesting responses that agents can review, edit, and send.
 
+<img src="/images/screenshots/copilot-app-interface.png" alt="Co-Pilot App Interface" />
+
 ## Interface Components
 
 ### Summary Section
