--- a/dashboard.mdx
+++ b/dashboard.mdx
@@ -20,6 +20,8 @@ The Dashboard serves as your command center, displaying:
 - Recent AI insights
 - Activity log
 
+<img src="/images/screenshots/dashboard-overview.png" alt="Dashboard Overview" />
+
 ## SmartAgents Section
 
 View all SmartAgents in your account with key metrics:
@@ -124,6 +126,8 @@ View and analyze by contact driver (intent):
 - AI performance by driver
 - Average handle time (AHT)
 - Estimated cost savings
+
+<img src="/images/screenshots/intent-dashboard.png" alt="Intent Dashboard" />
 
 ### Total Metrics Cards
 
