--- a/platform/knowledgeManagement.mdx
+++ b/platform/knowledgeManagement.mdx
@@ -10,6 +10,8 @@ The **Knowledge Management** section is a tool for uploading and managing knowle
 
 Knowledge Management provides a central repository of information that SmartAgents can search and retrieve to provide accurate, contextual responses. This ensures consistent information across all customer interactions.
 
+<img src="/images/screenshots/knowledge-management-interface.png" alt="Knowledge Management Interface" />
+
 ## Purpose
 
 Supports the **Knowledge Search** step by providing a centralized knowledge base that SmartAgents can query during interactions.
