--- a/platform/reporting.mdx
+++ b/platform/reporting.mdx
@@ -10,6 +10,8 @@ icon: "chart-line"
 
 While traditional BI tools excel at showing *what* is happening (metrics, trends, volumes), Voice of the Customer reveals *why* it's happening by analyzing actual customer conversations. This qualitative layer adds context and meaning to quantitative data.
 
+<img src="/images/screenshots/voice-of-customer-interface.png" alt="Voice of the Customer Interface" />
+
 ## Purpose
 
 Enable exploration of customer conversations to uncover:
