--- a/platform/smartAgentBuilder.mdx
+++ b/platform/smartAgentBuilder.mdx
@@ -10,6 +10,8 @@ The **SmartAgent Builder** is the primary workspace for creating and modifying S
 
 The SmartAgent Builder is organized into three main tabs, each serving a specific purpose in the agent development lifecycle.
 
+<img src="/images/screenshots/smartagent-builder-canvas.png" alt="SmartAgent Builder Canvas" />
+
 ## Tabs
 
 ### SmartAgent Profile
