--- a/platform/qaQueue.mdx
+++ b/platform/qaQueue.mdx
@@ -10,6 +10,8 @@ The **Quality** section provides tools for collecting and reviewing feedback on 
 
 Quality management is essential for maintaining high standards in AI-generated responses. This section provides the infrastructure to review conversations, collect feedback, and track performance over time.
 
+<img src="/images/screenshots/quality-queue-interface.png" alt="Quality Queue Interface" />
+
 ## Tabs
 
 ### Queue
