--- a/platform/settings.mdx
+++ b/platform/settings.mdx
@@ -10,6 +10,8 @@ icon: "gear"
 
 Settings is organized into tabs that manage different aspects of your workspace configuration, from user permissions to API integrations to AI provider keys.
 
+<img src="/images/screenshots/settings-user-management.png" alt="Settings - User Management" />
+
 ## Tabs
 
 ### Users
